fixed a couple spacing issues

--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ main {
     margin-right: auto;
     margin-top: 5vh;
 
-    width: 240px;
+    width: 260px;
 
     text-align: left;
 
@@ -157,7 +157,6 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: .5vh;
 
     border: 1px solid;
     border-radius: 15px;
@@ -178,7 +177,6 @@ main {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: .5vh;
 
     padding: 5px;
 
@@ -214,6 +212,8 @@ main {
     
     border-radius: 15px;
     background-color: green;
+    color: black;
+    font-weight: bold;
     border: 1px solid rgb(1, 75, 1);
 
     padding: 10px;
@@ -238,6 +238,8 @@ main {
 .js-button {
     border-radius: 15px;
     background-color: green;
+    color: black;
+    font-weight: bold;
     border: 1px solid rgb(1, 75, 1);
 
     padding: 10px;
